--- a/app/components/header/Header.module.css
+++ b/app/components/header/Header.module.css
@@ -14,7 +14,7 @@
     text-decoration: none;
     color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
     font-weight: 500;
-    font-size: var(--mantine-font-size-lg);
+    font-size: var(--mantine-font-size-md);
   
     @media (max-width: var(--mantine-breakpoint-sm)) {
       height: 42px;
